--- a/style.css
+++ b/style.css
@@ -110,9 +110,34 @@ h1,h2 {
     flex-direction: column;
 }
 
+.card_image {
+    position: relative; /* Needed for proper alignment */
+    background-color: var(--white);
+}
+
+.profile {
+    
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    overflow: hidden;
+    margin: 0 auto; 
+    margin-bottom: -50px;
+    position: relative; 
+    top: -50px; 
+    background-color: var(--white);
+} 
+
+.profile img {
+    background-color: var(--white);
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+  
 .card {
     text-align: center;
-    row-gap: 1.25rem;
     background-color: var(--white);
     border-radius: 16px;
     overflow: hidden;
