--- a/style.css
+++ b/style.css
@@ -115,23 +115,21 @@ h1,h2 {
     background-color: var(--white);
 }
 
-.profile {
-    
+/* .profile {
     width: 100px;
     height: 100px;
     border-radius: 50%;
     overflow: hidden;
     margin: 0 auto; 
-    margin-bottom: -50px;
-    position: relative; 
-    top: -50px; 
-    background-color: var(--white);
-} 
+    margin-top: -50px;
+}  */
 
 .profile img {
-    background-color: var(--white);
-    width: 100%;
-    height: 100%;
+    width: 100px;
+    height: 100px;
+    margin-top: -50px;
+    border-radius: 50%;
+    border: 4px solid var(--white);
     object-fit: cover;
 }
 
